Updates for version 11